# TestOAuthVK

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/: main.py
src/static/: index.js
src/templates/: success.html
